<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.MainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/menu_internet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_internet" />

            <Button
                android:id="@+id/menu_sharing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_internet"
                android:text="@string/menu_sharing" />

            <Button
                android:id="@+id/menu_reboot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_sharing"
                android:text="@string/menu_reboot" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/menu_home_ntwk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_home_ntwk" />

            <Button
                android:id="@+id/menu_maintain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_home_ntwk"
                android:text="@string/menu_maintain" />

            <Button
                android:id="@+id/menu_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_maintain"
                android:text="@string/menu_logout" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/info_placeholders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <TextView
        android:id="@+id/uptime_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:textSize="12sp"
        android:text="@string/uptime"/>

    <TextView
        android:id="@+id/wifi_devices_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uptime_placeholder"
        android:paddingBottom="20dp"
        android:textSize="12sp"
        android:text="@string/wifi_devices" />

    <TextView
        android:id="@+id/conn_devices_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_devices_placeholder"
        android:paddingBottom="20dp"
        android:textSize="12sp"
        android:text="@string/connected_devices" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/info_placeholders"
        android:layout_toEndOf="@+id/info_placeholders" >

        <TextView
            android:id="@+id/uptime_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:paddingBottom="20dp"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/wifi_devices_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uptime_value"
            android:paddingBottom="20dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/conn_devices_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wifi_devices_value"
            android:paddingBottom="20dp"
            android:textSize="12sp" />
    </RelativeLayout>


</RelativeLayout>