<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/login_placeholder_username" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/login_username"
        android:layout_alignLeft="@+id/login_username"
        android:layout_alignStart="@+id/login_username"
        android:textColor="@color/colorPrimary"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_placeholder_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:textColor="@color/colorPrimary"
        android:text="@string/login_button_text" />

</RelativeLayout>